--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ body {
 }
 .layout {
   height: auto;
-  background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65)),url(/public/cover-pic.jpg);
   background-position: center;
   background-size: cover; 
   width: 100%;
@@ -59,14 +58,27 @@ body {
 }
 .login-form {
   width: 360px;
-  padding: 4rem 2rem;
+  padding: 3rem 2rem;
   border-radius: 1rem;
   box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
 }
 
-.login-title {
-  font-weight: 400;
+.login-header-section {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  text-align: center;
   margin-bottom: 3rem;
+
+
+}
+
+.login-title {
+  text-align: center;
+  margin: auto;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 .input-group {
@@ -104,6 +116,8 @@ body {
 .submit-button {
   display: block;
   margin: auto;
+  margin-top: 3rem;
+  width: 300px;
   padding: 0.75rem 2rem;
   outline: none;
   border: none;
